<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">SpectraHex</string>
   <string name="app_name_demo">SpectraHex (DEMO)</string>

   <!-- menu string resources -->
   <string name="new_game">New game</string>
   <string name="diff_normal">Normal</string>
   <string name="diff_difficult">Difficult</string>
   <string name="diff_impossible">Impossible</string>

   <string name="more">More</string>
   <string name="about">About</string>
   <string name="exit">Exit Application</string>

   <string name="help">Help</string>

   <!-- ui resources -->
   <string name="button_undo">Undo</string>
   <string name="button_redo">Redo</string>
</resources>
