<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
      android:icon="@drawable/ic_menu_compose"
      android:title="@string/new_game">
      <menu>
         <item
            android:id="@+id/diff_normal"
            android:title="@string/diff_normal" />
         <item
            android:id="@+id/diff_difficult"
            android:title="@string/diff_difficult" />
         <item
            android:id="@+id/diff_impossible"
            android:title="@string/diff_impossible" />
      </menu>
   </item>
   <item
      android:icon="@drawable/ic_menu_more"
      android:title="@string/more">
      <menu>
         <item
            android:id="@+id/about"
            android:title="@string/about" />
         <item
            android:id="@+id/exit"
            android:title="@string/exit" />
      </menu>
   </item>
</menu>
